# ArtOfMixingVisualizer

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/ArtOfMixingVisualizer/: MainComponent.h  OpenGLComponent.h  WavefrontObjFile.h
app/source/: Main.cpp  MainComponent.cpp  OpenGLComponent.cpp
plugin/: CMakeLists.txt
plugin/include/ArtOfMixingVisualizer/: PluginEditor.h  PluginProcessor.h
plugin/source/: PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
